:sparkles: count-and-say

--- a/README.adoc
+++ b/README.adoc
@@ -73,6 +73,7 @@ a|
 * link:{package}/RomanToInteger.java[roman-to-integer]
 * link:{package}/LongestCommonPrefix.java[longest-common-prefix]
 * link:{package}/ImplementStrStr.java[implement-strstr]
+* link:{package}/CountAndSay.java[count-and-say]
 a|
 * link:{package}/SimplifyPath.java[simplify-path]
 * link:{package}/MiniParser.java[mini-parser]
