:sparkles: valid-palindrome

--- a/README.adoc
+++ b/README.adoc
@@ -76,6 +76,7 @@ a|
 * link:{package}/CountAndSay.java[count-and-say]
 * link:{package}/LengthOfLastWord.java[length-of-last-word]
 * link:{package}/AddBinary.java[add-binary]
+* link:{package}/ValidPalindrome.java[valid-palindrome]
 a|
 * link:{package}/SimplifyPath.java[simplify-path]
 * link:{package}/MiniParser.java[mini-parser]
@@ -109,6 +110,7 @@ a|
 * link:{package}/CountPrimes.java[count-primes]
 * link:{package}/RomanToInteger.java[roman-to-integer]
 * link:{package}/AddBinary.java[add-binary]
+* link:{package}/ValidPalindrome.java[valid-palindrome]
 |
 |
 
