--- a/README.adoc
+++ b/README.adoc
@@ -77,6 +77,7 @@ a|
 * link:{package}/LengthOfLastWord.java[length-of-last-word]
 * link:{package}/AddBinary.java[add-binary]
 * link:{package}/ValidPalindrome.java[valid-palindrome]
+* link:{package}/ReverseString.java[reverse-string]
 a|
 * link:{package}/SimplifyPath.java[simplify-path]
 * link:{package}/MiniParser.java[mini-parser]
@@ -110,7 +111,6 @@ a|
 * link:{package}/CountPrimes.java[count-primes]
 * link:{package}/RomanToInteger.java[roman-to-integer]
 * link:{package}/AddBinary.java[add-binary]
-* link:{package}/ValidPalindrome.java[valid-palindrome]
 |
 |
 
@@ -229,6 +229,8 @@ a|
 * link:{package}/IntersectionOfTwoArrays.java[intersection-of-two-arrays]
 * link:{package}/IntersectionOfTwoArraysII.java[intersection-of-two-arrays-ii]
 * link:{package}/ImplementStrStr.java[implement-strstr]
+* link:{package}/ValidPalindrome.java[valid-palindrome]
+* link:{package}/ReverseString.java[reverse-string]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
