:sparkles: number-of-segments-in-a-string

--- a/README.adoc
+++ b/README.adoc
@@ -82,6 +82,7 @@ a|
 * link:{package}/RansomNote.java[ransom-note]
 * link:{package}/FirstUniqueCharacterInAString.java[first-unique-character-in-a-string]
 * link:{package}/AddStrings.java[add-strings]
+* link:{package}/NumberOfSegmentsInAString.java[number-of-segments-in-a-string]
 a|
 * link:{package}/SimplifyPath.java[simplify-path]
 * link:{package}/MiniParser.java[mini-parser]
