--- a/README.adoc
+++ b/README.adoc
@@ -83,6 +83,7 @@ a|
 * link:{package}/FirstUniqueCharacterInAString.java[first-unique-character-in-a-string]
 * link:{package}/AddStrings.java[add-strings]
 * link:{package}/NumberOfSegmentsInAString.java[number-of-segments-in-a-string]
+* link:{package}/RepeatedSubstringPattern.java[repeated-substring-pattern]
 a|
 * link:{package}/SimplifyPath.java[simplify-path]
 * link:{package}/MiniParser.java[mini-parser]
