:sparkles: detect-capital

--- a/README.adoc
+++ b/README.adoc
@@ -84,6 +84,7 @@ a|
 * link:{package}/AddStrings.java[add-strings]
 * link:{package}/NumberOfSegmentsInAString.java[number-of-segments-in-a-string]
 * link:{package}/RepeatedSubstringPattern.java[repeated-substring-pattern]
+* link:{package}/DetectCapital.java[detect-capital]
 a|
 * link:{package}/SimplifyPath.java[simplify-path]
 * link:{package}/MiniParser.java[mini-parser]
