--- a/README.adoc
+++ b/README.adoc
@@ -90,6 +90,7 @@ a|
 * link:{package}/MiniParser.java[mini-parser]
 * link:{package}/LongestSubstringWithoutRepeatingCharacters.java[longest-substring-without-repeating-characters]
 * link:{package}/GroupAnagrams.java[group-anagrams]
+* link:{package}/ZigZagConversion.java[zigzag-conversion]
 |
 
 | LinkedList
