--- a/README.adoc
+++ b/README.adoc
@@ -132,6 +132,7 @@ a|
 * link:{package}/ReverseInteger.java[reverse-integer]
 * link:{package}/PalindromeNumber.java[palindrome-number]
 * link:{package}/Sqrtx.java[sqrtx]
+* link:{package}/ExcelSheetColumnTitle.java[excel-sheet-column-title]
 a|
 * link:{package}/StringToIntegerAtoi.java[string-to-integer-atoi]
 * link:{package}/IntegerToRoman.java[integer-to-roman]
