:sparkles: same-tree

--- a/README.adoc
+++ b/README.adoc
@@ -208,7 +208,8 @@ a|
 |
 
 | Tree
-|
+a|
+* link:{package}/SameTree.java[same-tree]
 a|
 * link:{package}/BinaryTreeInorderTraversal.java[binary-tree-inorder-traversal]
 * link:{package}/BSTIterator.java[binary-search-tree-iterator]
@@ -305,7 +306,8 @@ a|
 |
 
 | DepthFirstSearch
-|
+a|
+* link:{package}/SameTree.java[same-tree]
 |
 |
 
