:sparkles: maximum-depth-of-binary-tree

--- a/README.adoc
+++ b/README.adoc
@@ -211,6 +211,7 @@ a|
 a|
 * link:{package}/SameTree.java[same-tree]
 * link:{package}/SymmetricTree.java[symmetric-tree]
+* link:{package}/MaximumDepthOfBinaryTree.java[maximum-depth-of-binary-tree]
 a|
 * link:{package}/BinaryTreeInorderTraversal.java[binary-tree-inorder-traversal]
 * link:{package}/BSTIterator.java[binary-search-tree-iterator]
@@ -310,6 +311,7 @@ a|
 a|
 * link:{package}/SameTree.java[same-tree]
 * link:{package}/SymmetricTree.java[symmetric-tree]
+* link:{package}/MaximumDepthOfBinaryTree.java[maximum-depth-of-binary-tree]
 |
 |
 
