:sparkles: convert-sorted-array-to-binary-search-tree

--- a/README.adoc
+++ b/README.adoc
@@ -213,6 +213,7 @@ a|
 * link:{package}/SymmetricTree.java[symmetric-tree]
 * link:{package}/MaximumDepthOfBinaryTree.java[maximum-depth-of-binary-tree]
 * link:{package}/BinaryTreeLevelOrderTraversalII.java[binary-tree-level-order-traversal-ii]
+* link:{package}/ConvertSortedArrayToBinarySearchTree.java[convert-sorted-array-to-binary-search-tree]
 a|
 * link:{package}/BinaryTreeInorderTraversal.java[binary-tree-inorder-traversal]
 * link:{package}/BSTIterator.java[binary-search-tree-iterator]
@@ -313,6 +314,7 @@ a|
 * link:{package}/SameTree.java[same-tree]
 * link:{package}/SymmetricTree.java[symmetric-tree]
 * link:{package}/MaximumDepthOfBinaryTree.java[maximum-depth-of-binary-tree]
+* link:{package}/ConvertSortedArrayToBinarySearchTree.java[convert-sorted-array-to-binary-search-tree]
 |
 |
 
