:sparkles: minimum-depth-of-binary-tree

--- a/README.adoc
+++ b/README.adoc
@@ -214,6 +214,7 @@ a|
 * link:{package}/MaximumDepthOfBinaryTree.java[maximum-depth-of-binary-tree]
 * link:{package}/BinaryTreeLevelOrderTraversalII.java[binary-tree-level-order-traversal-ii]
 * link:{package}/ConvertSortedArrayToBinarySearchTree.java[convert-sorted-array-to-binary-search-tree]
+* link:{package}/MinimumDepthOfBinaryTree.java[minimum-depth-of-binary-tree]
 a|
 * link:{package}/BinaryTreeInorderTraversal.java[binary-tree-inorder-traversal]
 * link:{package}/BSTIterator.java[binary-search-tree-iterator]
@@ -315,6 +316,7 @@ a|
 * link:{package}/SymmetricTree.java[symmetric-tree]
 * link:{package}/MaximumDepthOfBinaryTree.java[maximum-depth-of-binary-tree]
 * link:{package}/ConvertSortedArrayToBinarySearchTree.java[convert-sorted-array-to-binary-search-tree]
+* link:{package}/MinimumDepthOfBinaryTree.java[minimum-depth-of-binary-tree]
 |
 |
 
@@ -322,6 +324,7 @@ a|
 a|
 * link:{package}/SymmetricTree.java[symmetric-tree]
 * link:{package}/BinaryTreeLevelOrderTraversalII.java[binary-tree-level-order-traversal-ii]
+* link:{package}/MinimumDepthOfBinaryTree.java[minimum-depth-of-binary-tree]
 |
 |
 
