:sparkles: binary-tree-paths

--- a/README.adoc
+++ b/README.adoc
@@ -218,6 +218,7 @@ a|
 * link:{package}/PathSum.java[path-sum]
 * link:{package}/InvertBinaryTree.java[invert-binary-tree]
 * link:{package}/LowestCommonAncestorOfABinarySearchTree.java[lowest-common-ancestor-of-a-binary-search-tree]
+* link:{package}/BinaryTreePaths.java[binary-tree-paths]
 a|
 * link:{package}/BinaryTreeInorderTraversal.java[binary-tree-inorder-traversal]
 * link:{package}/BSTIterator.java[binary-search-tree-iterator]
@@ -321,6 +322,7 @@ a|
 * link:{package}/ConvertSortedArrayToBinarySearchTree.java[convert-sorted-array-to-binary-search-tree]
 * link:{package}/MinimumDepthOfBinaryTree.java[minimum-depth-of-binary-tree]
 * link:{package}/PathSum.java[path-sum]
+* link:{package}/BinaryTreePaths.java[binary-tree-paths]
 |
 |
 
